# autotsforecast

./: .gitignore  API_REFERENCE.md  LICENSE  MANIFEST.in  PARAMETER_GUIDE.md  QUICKSTART.md  README.md  README_PYPI.md  RELEASE_NOTES.md  TECHNICAL_DOCUMENTATION.md  debug_per_series.py  my_minimal_app.py  pyproject.toml  requirements.txt  streamlit_app.py  test_per_series_results.txt  test_quick_results.txt  test_readme_examples.py
.github/workflows/: tests.yml
.streamlit/: config.toml
autotsforecast/: API_REFERENCE.md  CHANGELOG.md  MANIFEST.in  PARAMETER_GUIDE.md  PUBLISHING_TO_PYPI.md  PUBLISH_NOW.md  QUICKSTART.md  README.md  README_PYPI.md  SUMMARY_TUTORIAL_AND_PUBLISHING.md  TECHNICAL_DOCUMENTATION.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_arima_fix.py  test_installation.py  test_sensitivity_fix.py
autotsforecast/examples/: autotsforecast_tutorial.ipynb
autotsforecast/src/autotsforecast/: forecaster.py
autotsforecast/src/autotsforecast/backtesting/: __init__.py  validator.py  validator.py.backup
autotsforecast/src/autotsforecast/hierarchical/: reconciliation.py
autotsforecast/src/autotsforecast/interpretability/: __init__.py  drivers.py
autotsforecast/src/autotsforecast/models/: __init__.py  base.py  external.py
autotsforecast/src/autotsforecast/utils/: preprocessing.py
autotsforecast/tests/: test_backtesting.py  test_interpretability.py  test_interpretability_new.py  test_models.py
examples/: agentic_tutorial.ipynb  autotsforecast_tutorial.ipynb  per_series_covariates_example.py
src/autotsforecast/: __init__.py  forecaster.py  schemas.py
src/autotsforecast/anomaly/: __init__.py  detector.py
src/autotsforecast/api/: __init__.py  app.py
src/autotsforecast/backtesting/: validator.py
src/autotsforecast/features/: __init__.py  calendar.py  engine.py
src/autotsforecast/integrations/: __init__.py  langchain_tools.py  openai_schemas.py
src/autotsforecast/interpretability/: drivers.py
src/autotsforecast/mcp/: __init__.py  server.py
src/autotsforecast/models/: __init__.py  base.py  external.py  selection.py
src/autotsforecast/nlp/: __init__.py  insights.py
src/autotsforecast/registry/: __init__.py  store.py
src/autotsforecast/uncertainty/: __init__.py  intervals.py
src/autotsforecast/utils/: data.py  parallel.py  profiler.py
src/autotsforecast/visualization/: __init__.py  plots.py  progress.py
tests/: test_all_readme.py  test_anomaly.py  test_api.py  test_autoforecaster.py  test_backtesting.py  test_hierarchical.py  test_insights.py  test_integration.py  test_mcp_tools.py  test_models.py  test_openai_schemas.py  test_per_series.py  test_per_series_covariates.py  test_per_series_quick.py  test_phase1_features.py  test_readme_example.py  test_readme_quick.py  test_registry.py  test_results.txt  test_schemas.py  test_v060_features.py  validate_features.py
ts-forecast-mvp/: .gitignore  BENCHMARKING_GUIDE.md  BENCHMARKING_RESULTS.md  BENCHMARK_SUMMARY.md  GITHUB_RENAME_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INSTALL_GUIDE.md  MANIFEST.in  PUBLISHING.md  QUICKSTART.md  README.md  README_NEW.md  pyproject.toml  requirements-optional.txt  setup.py
ts-forecast-mvp/examples/: autotsforecast_tutorial.ipynb  benchmark.py  benchmark_demo.py  forecasting_demo.ipynb  forecasting_tutorial.ipynb  quickstart.py
ts-forecast-mvp/src/autotsforecast/: __init__.py  forecaster.py
ts-forecast-mvp/src/autotsforecast/backtesting/: validator.py
ts-forecast-mvp/src/autotsforecast/hierarchical/: __init__.py  reconciliation.py
ts-forecast-mvp/src/autotsforecast/models/: external.py  selection.py
ts-forecast-mvp/src/autotsforecast/utils/: __init__.py
ts-forecast-mvp/src/ts_forecast/: __init__.py  forecaster.py
ts-forecast-mvp/src/ts_forecast/backtesting/: __init__.py  validator.py
ts-forecast-mvp/src/ts_forecast/hierarchical/: __init__.py  reconciliation.py
ts-forecast-mvp/src/ts_forecast/interpretability/: __init__.py  drivers.py
ts-forecast-mvp/src/ts_forecast/models/: __init__.py  base.py  external.py  selection.py
ts-forecast-mvp/src/ts_forecast/utils/: __init__.py  data.py
ts-forecast-mvp/tests/: test_backtesting.py  test_backtesting_new.py  test_hierarchical.py  test_hierarchical_new.py  test_interpretability.py  test_interpretability_new.py  test_models.py
