[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autotsforecast"
version = "0.3.9"
description = "Automated time series forecasting with Chronos-2 foundation model (zero-shot, no training required), per-series model selection, and interpretability."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Weibin Xu", email = "weibinxu86@gmail.com" }]
keywords = ["time series", "forecasting", "multivariate", "automated", "hierarchical", "interpretability", "shap", "prediction intervals", "conformal prediction"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering :: Artificial Intelligence",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Operating System :: OS Independent",
]
dependencies = [
	"numpy>=1.21.0",
	"pandas>=1.3.0",
	"scikit-learn>=1.0.0",
	"statsmodels>=0.13.0",
	"scipy>=1.7.0",
	"joblib>=1.1.0",
]

[project.optional-dependencies]
viz = [
	"matplotlib>=3.4.0",
	"seaborn>=0.11.0",
	"plotly>=5.0.0",
]
progress = [
	"rich>=12.0.0",
	"tqdm>=4.60.0",
]
interpret = [
	"shap>=0.42.0",
]
ml = [
	"xgboost>=2.0.0",
]
prophet = [
	"prophet>=1.1.0",
]
neural = [
	"darts>=0.27.0",
	"torch>=2.0.0",
	"lightning>=2.0.0",
]
chronos = [
	"chronos-forecasting>=2.2.0",
	"torch>=2.0.0",
]
holidays = [
	"holidays>=0.25",
]
dev = [
	"pytest>=7.0.0",
	"pytest-cov>=3.0.0",
	"black>=22.0.0",
	"flake8>=4.0.0",
	"mypy>=0.950",
	"ipython>=8.0.0",
	"jupyter>=1.0.0",
	"nbformat>=5.0.0",
]
all = [
	"matplotlib>=3.4.0",
	"seaborn>=0.11.0",
	"plotly>=5.0.0",
	"rich>=12.0.0",
	"tqdm>=4.60.0",
	"shap>=0.42.0",
	"chronos-forecasting>=2.2.0",
	"xgboost>=2.0.0",
	"prophet>=1.1.0",
	"darts>=0.27.0",
	"torch>=2.0.0",
	"lightning>=2.0.0",
	"holidays>=0.25",
]

[project.urls]
Homepage = "https://github.com/weibinxu86/autotsforecast"
Repository = "https://github.com/weibinxu86/autotsforecast"
Documentation = "https://github.com/weibinxu86/autotsforecast#readme"

[tool.setuptools.packages.find]
where = ["src"]
