[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ts-forecast"
version = "0.1.0"
description = "A package for forecasting multivariate time series with model selection, backtesting, hierarchical forecasting, and interpretability."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/weibinxu86/tsforecast"
repository = "https://github.com/weibinxu86/tsforecast"
keywords = ["time series", "forecasting", "multivariate", "model selection", "backtesting", "interpretability"]
packages = [{include = "ts_forecast", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = ">=1.3.0"
numpy = ">=1.21.0"
scikit-learn = ">=0.24.0"
statsmodels = ">=0.12.0"
scipy = ">=1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"
black = "^21.7b0"
flake8 = "^3.9.2"

[build]
source = ["src"]